--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <h2 style="color:red">Homework</h2>
         <input id="x" size=5> + <input id="y" size=5> = <span id= "z"> </span>
         <script src='prathu.js'></script>
+        <!--<script>
+        console.log('hello world')
+        </script>-->
     </head>
 </html>
 
